force-app/main/default/objects/CampaignMember/fields/Answered__c.field-meta.xml
<CustomField>
    <fullName>Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the person answered the phone call.</description>
    <inlineHelpText>Indicates whether or not the person answered the phone call.</inlineHelpText>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>