force-app/main/default/objects/CampaignMember/fields/Hang_up__c.field-meta.xml
<CustomField>
    <fullName>Hang_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the person hung up the phone as soon as they discovered it was a telemarketing call.</description>
    <inlineHelpText>Indicates if the person hung up the phone as soon as they discovered it was a telemarketing call.</inlineHelpText>
    <label>Hang-up</label>
    <type>Checkbox</type>
</CustomField>