force-app/main/default/objects/CampaignMember/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the conference attendee has paid.</description>
    <inlineHelpText>Indicates that the conference attendee has paid.</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>