force-app/main/default/objects/CampaignMember/recordTypes/Conference.recordType-meta.xml
<RecordType>
    <fullName>Conference</fullName>
    <active>false</active>
    <description>Use this record type for members of a conference campaign.</description>
    <label>Conference</label>
</RecordType>