force-app/main/default/objects/CampaignMember/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>false</active>
    <description>Use this record type for members of an email campaign.</description>
    <label>Email</label>
</RecordType>