force-app/main/default/objects/CampaignMember/recordTypes/Telemarketing.recordType-meta.xml
<RecordType>
    <fullName>Telemarketing</fullName>
    <active>false</active>
    <description>Use this record type for members of a telemarketing campaign.</description>
    <label>Telemarketing</label>
</RecordType>