force-app/main/default/objects/CampaignMember/recordTypes/Webinar.recordType-meta.xml
<RecordType>
    <fullName>Webinar</fullName>
    <active>false</active>
    <description>Use this record type for members of a webinar campaign.</description>
    <label>Webinar</label>
</RecordType>